Convert to utf-8 like all other changelogs

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* configure.ac: Release 1.13.15.
 
-2006-02-15  SZERV¡C Attila  <sas@321.hu>
+2006-02-15  SZERV√ÅC Attila  <sas@321.hu>
 
 	* man/hu/dpkg.cfg.5.hu.po: Added.
 	* man/hu/dpkg.cfg.5.hu.po.addendum: Likewise.
@@ -35,7 +35,7 @@
 	* man/fr/dpkg-source.1.fr.po: Likewise.
 	* man/fr/dpkg-split.1.fr.po: Likewise.
 
-2006-02-11  Nicolas FranÁois  <nicolas.francois@centraliens.net>
+2006-02-11  Nicolas Fran√ßois  <nicolas.francois@centraliens.net>
 
 	* man/*/*.addendum: use a generic position to insert the addenda,
 	which should always exist in a valid man page.
@@ -138,7 +138,7 @@
 	and dynamic linker flags, thus no more hardcoding the transitional
 	libraries.
 
-2006-02-07  Nicolas FranÁois  <nicolas.francois@centraliens.net>
+2006-02-07  Nicolas Fran√ßois  <nicolas.francois@centraliens.net>
 
 	* man/C/dselect.1: Fix a typo: replace '.sh' by '.sp'.
 	* man/C/dpkg-scansources.1: Fix a typo: replace '.Sp' by '.sp'.
@@ -194,7 +194,7 @@
 2006-02-05  Christian Perrier  <bubulle@debian.org>
 
 	* man/*: Switch all translations to po4a. Work contributed
-	by Nicolas FranÁois.
+	by Nicolas Fran√ßois.
 
 2006-01-30  Frank Lichtenheld  <djpig@debian.org>
 
@@ -940,7 +940,7 @@
 	* scripts/changelog/debian.pl: Revert accidental half-patch that
 	turned the Maintainer field into a Changed-By field.
 
-2005-03-21  Marc DequËnes  <duck@duckcorp.org>
+2005-03-21  Marc Dequ√®nes  <duck@duckcorp.org>
 
 	* scripts/dpkg-gencontrol.pl: Fix filename regexp to allow '-'
 	in architecture names.
@@ -1966,7 +1966,7 @@ Mon Oct 25 18:26:54 CEST 2004 Yuri Kozlov <yuray@id.ru>
 
   * po/ru.po: Updated
 
-Mon Oct 25 15:09:43 CEST 2004 Trorrr [HÈctor Fern·ndez] <trorrr@yahoo.es>
+Mon Oct 25 15:09:43 CEST 2004 Trorrr [H√©ctor Fern√°ndez] <trorrr@yahoo.es>
 
   * po/gl.po: Updated
 
@@ -1998,7 +1998,7 @@ Sun Oct 24 20:16:43 CEST 2004 Lele Gaifax <lele@nautilus.homeip.net>
 
   * po/it.po: Updated
 
-Sun Oct 24 20:06:43 CEST 2004 Trorrr [HÈctor Fern·ndez] <trorrr@yahoo.es>
+Sun Oct 24 20:06:43 CEST 2004 Trorrr [H√©ctor Fern√°ndez] <trorrr@yahoo.es>
 
   * po/gl.po: Updated
 
@@ -2054,7 +2054,7 @@ Fri Jun 18 17:04:44 BST 2004 Scott James Remnant <scott@netsplit.com>
   * dpkg-deb/dpkg-deb.h: Add extern definition of compress_type option,
   add macros to define the bzip2 and pass-through data member filenames.
 
-Tue Oct 19 08:28:46 CEST 2004 Javier Fern·ndez-Sanguino PeÒa <jfs@computer.org>
+Tue Oct 19 08:28:46 CEST 2004 Javier Fern√°ndez-Sanguino Pe√±a <jfs@computer.org>
 
   * po/es.po: updated (complete)
 
@@ -2427,7 +2427,7 @@ Fri May 7 00:39:01 BST 2004 Christian Perrier <bubulle@debian.org>
 
 Fri May 7 00:04:28 BST 2004 Scott James Remnant <scott@netsplit.com>
 
-  * lib/parsehelp.c,†scripts/dpkg-source.pl, scripts/cl-debian.pl: Remove
+  * lib/parsehelp.c,¬†scripts/dpkg-source.pl, scripts/cl-debian.pl: Remove
   restriction that package names be at least two characters long.
 
 Thu May 6 23:57:52 BST 2004 Andrew Shugg <andrew@neep.com.au>
@@ -7299,7 +7299,7 @@ dpkg (1.4.1.5) unstable; urgency=low
 dpkg (1.4.1.4) unstable; urgency=low
 
   * Also change developer-keyring to debian-keyring for dpkg-dev package
-  * Include spanish translation from Nicol·s Lichtmaier <nick@debian.org>
+  * Include spanish translation from Nicol√°s Lichtmaier <nick@debian.org>
   * Depend on perl5 instead of perl
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon,  5 Jul 1999 00:04:14 +0200
