--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-16  Frank Lichtenheld  <djpig@debian.org>
+
+	* configure.ac: Bump version to 1.13.16~
+
 2006-02-15  Frank Lichtenheld  <djpig@debian.org>
 
 	* configure.ac: Release 1.13.15.
