--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.13.16~) UNRELEASED; urgency=low
+
+  [ Guillem Jover ]
+  * Move auxiliary autotools scripts to config/.
+
+ -- Guillem Jover <guillem@debian.org>  Fri, 17 Feb 2006 03:52:59 +0200
+
 dpkg (1.13.15) unstable; urgency=low
 
   [ Guillem Jover ]
