--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Require gettext 0.14.5.
+
+2006-02-17  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Use AC_CONFIG_AUX_DIR to move auxiliary scripts to
 	config/.
 
