--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dpkg (1.13.16~) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Move auxiliary autotools scripts to config/.
+  * Require gettext 0.14.5.
 
  -- Guillem Jover <guillem@debian.org>  Fri, 17 Feb 2006 03:52:59 +0200
 
