--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
+	* methods/: Move directory to dselect/methods/.
+	* Makefile.am (SUBDIRS): Move methods to ...
+	* dselect/Makefile.am (SUBDIRS): ... here. New variable.
+	* configure.ac (AC_CONFIG_FILES): Rename methods/Makefile to
+	dselect/methods/Makefile.
+
+2006-02-17  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Require gettext 0.14.5.
 
 2006-02-17  Guillem Jover  <guillem@debian.org>
