* dpkg.pot: Regenerated. * *.po: Merged with dpkg.pot. Add missing closing parenthesis to non-fuzzy strings.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-02-17  Guillem Jover  <guillem@debian.org>
+
+	* dpkg.pot: Regenerated.
+	* *.po: Merged with dpkg.pot. Add missing closing parenthesis to
+	non-fuzzy strings.
+
 2006-02-15  Frank Lichtenheld  <djpig@debian.org>
 
 	* LINGUAS: Add hu.
