--- a/po/cs.po
+++ b/po/cs.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2006-02-11 02:12+0100\n"
+"POT-Creation-Date: 2006-02-17 08:03+0200\n"
 "PO-Revision-Date: 2005-12-30 19:05+0100\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
@@ -2765,7 +2765,7 @@ msgstr "nelze zjistit fstat části souboru `%.250s'"
 #, fuzzy, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
-"%.250s' and `%.250s'"
+"%.250s' and `%.250s')"
 msgstr ""
 "dpkg: %s: varování - konfigurační soubor `%.250s' není souborem ani\n"
 " symbolickým odkazem (= `%s')\n"
