--- a/po/eu.po
+++ b/po/eu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2006-02-11 02:12+0100\n"
+"POT-Creation-Date: 2006-02-17 08:03+0200\n"
 "PO-Revision-Date: 2006-02-07 22:36+0100\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale.org <librezale@librezale.org>\n"
@@ -2811,7 +2811,7 @@ msgstr "ezin da fstat egin `%.250s' zati-fitxategian"
 #, fuzzy, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
-"%.250s' and `%.250s'"
+"%.250s' and `%.250s')"
 msgstr ""
 "dpkg: %s: abisua - `%.250s' konf. fitxategia ez da fitxategi arrunta, ezta "
 "esteka sinbolikoa ere (= `%s')\n"
