--- a/po/id.po
+++ b/po/id.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2006-02-11 02:12+0100\n"
+"POT-Creation-Date: 2006-02-17 08:03+0200\n"
 "PO-Revision-Date: 2005-12-23 18:05+0700\n"
 "Last-Translator: Parlin Imanuel <parlin_i@yahoo.com>\n"
 "Language-Team: Debian Indonesia L10N Team <debian-l10n-id@gurame.fisika.ui."
@@ -2791,7 +2791,7 @@ msgstr "tidak bisa melakukan 'fstat' berkas 'part' `%.250s'"
 #, fuzzy, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
-"%.250s' and `%.250s'"
+"%.250s' and `%.250s')"
 msgstr ""
 "dpkg: %s: PERINGATAN - conffile `%.250s' bukan sebuah berkas normal atau "
 "symlink (= `%s') \n"
