--- a/po/ko.po
+++ b/po/ko.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2006-02-11 02:12+0100\n"
+"POT-Creation-Date: 2006-02-17 08:03+0200\n"
 "PO-Revision-Date: 2004-11-21 03:52+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: Korean <cwryu@debian.org>\n"
@@ -2766,7 +2766,7 @@ msgstr "구성 요소 파일 `%.250s'의 정보를 읽을 수 없습니다"
 #, fuzzy, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
-"%.250s' and `%.250s'"
+"%.250s' and `%.250s')"
 msgstr ""
 "dpkg: %s: 경고 - 설정 파일 `%.250s'은(는) (= `%s') 일반 파일이나 심볼릭 링크"
 "가 아닙니다\n"
