--- a/po/nb.po
+++ b/po/nb.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2006-02-11 02:12+0100\n"
+"POT-Creation-Date: 2006-02-17 08:03+0200\n"
 "PO-Revision-Date: 2005-08-22 15:47+0100\n"
 "Last-Translator: Hans Fredrik Nordhaug <hans@nordhaug.priv.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.ui.no>\n"
@@ -2782,7 +2782,7 @@ msgstr "klarte ikke kjøre «fstat» på delfila «%.250s»"
 #, fuzzy, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
-"%.250s' and `%.250s'"
+"%.250s' and `%.250s')"
 msgstr ""
 "dpkg: %s: Advarsel - oppsettsfila «%.250s» er ingen vanlig fil eller "
 "symbolsk lenke (= «%s»)\n"
