--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2006-02-11 02:12+0100\n"
-"PO-Revision-Date: 2006-02-11 19:24-0200\n"
+"POT-Creation-Date: 2006-02-17 08:03+0200\n"
+"PO-Revision-Date: 2006-02-17 08:13+0200\n"
 "Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
 "Language-Team: Debian-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2286,21 +2286,24 @@ msgstr ""
 "  -P|--purge               <nome de pacote> ... | -a|--pending\n"
 "  --get-selections [<padrão> ...]     Obter lista de seleções na saída "
 "padrão (stdout);\n"
-"  --set-selections                    Definir seleções de pacotes a "
-"partir da entrada padrão (stdin).\n"
+"  --set-selections                    Definir seleções de pacotes a partir "
+"da entrada padrão (stdin).\n"
 "  --update-avail <arquivo-Packages>   Substituir inf. de pacotes disp.\n"
 "  --merge-avail <arquivo-Packages>    Juntar com inf. do arquivo.\n"
 "  --clear-avail                       Apagar inf. existentes disponíveis.\n"
 "  --forget-old-unavail                Esquecer pacotes não inst. e indisp.\n"
 "  -s|--status <nome-pacote> ...       Exibir detalhes do estado do pacote.\n"
-"  -p|--print-avail <nome-pacote> ...  Exibir detalhes sobre versões disponíveis.\n"
+"  -p|--print-avail <nome-pacote> ...  Exibir detalhes sobre versões "
+"disponíveis.\n"
 "  -L|--listfiles <nome-pacote> ...    Lista arquivos `pertencentes' ao(s)"
 "pacote(s).\n"
 "  -l|--list [<padrão> ...]            Lista pacotes de maneira concisa.\n"
-"  -S|--search <padrão> ...            Encontra pacote(s) `donos' de arquivo(s).\n"
+"  -S|--search <padrão> ...            Encontra pacote(s) `donos' de arquivo"
+"(s).\n"
 "  -C|--audit                          Procura por pacote(s) quebrado(s).\n"
 "  --print-architecture                Exibe arquitetura do dpkg.\n"
-"  --compare-versions <a> <rel> <b>    Compara números de versão - veja abaixo.\n"
+"  --compare-versions <a> <rel> <b>    Compara números de versão - veja "
+"abaixo.\n"
 "  --help                              Exibir esta mensagem de ajuda.\n"
 "  --version                           Exibe a versão.\n"
 "  --force-help | -Dh|--debug=help     Ajuda para forçar depuração resp.\n"
@@ -2332,8 +2335,8 @@ msgstr ""
 "debug=help.\n"
 "  --status-fd <n>            Envia atualizações do status das mudanças para "
 "o descritor de arquivos <n>.\n"
-"  --log=<nome-arquivo>       Loga estado de mudanças e ações para "
-"<nome-arquivo>.\n"
+"  --log=<nome-arquivo>       Loga estado de mudanças e ações para <nome-"
+"arquivo>.\n"
 "  --ignore-depends=<pacote>,... Ignorar dependências envolvendo <pacote>.\n"
 "  --force-...                    Ignorar problemas - ver --force-help.\n"
 "  --no-force-...|--refuse-...    Parar quando problemas forem encontrados.\n"
@@ -2800,14 +2803,13 @@ msgstr "dpkg-deb: zap possible trailing zeros"
 #, c-format
 msgid "dpkg: warning - could not stat old file `%.250s' so not deleting it: %s"
 msgstr ""
-"dpkg: aviso - não foi possível fazer stat em arquivo antigo `%.250s'"
-"portanto não removendo o mesmo: %s"
+"dpkg: aviso - não foi possível fazer stat em arquivo antigo `%.250s'portanto "
+"não removendo o mesmo: %s"
 
 #: src/processarc.c:619
 #, c-format
 msgid "dpkg: warning - unable to delete old directory `%.250s': %s\n"
-msgstr ""
-"dpkg: aviso - não foi possível apagar diretório antigo `%.250s': %s\n"
+msgstr "dpkg: aviso - não foi possível apagar diretório antigo `%.250s': %s\n"
 
 #: src/processarc.c:623
 #, c-format
@@ -2815,8 +2817,8 @@ msgid ""
 "dpkg: warning - old conffile `%.250s' was an empty directory (and has now "
 "been deleted)\n"
 msgstr ""
-"dpkg: aviso - arquivo de configuração antigo `%.250s' era um diretório "
-"vazio (e foi removido)\n"
+"dpkg: aviso - arquivo de configuração antigo `%.250s' era um diretório vazio "
+"(e foi removido)\n"
 
 #: src/processarc.c:653
 #, c-format
@@ -2827,10 +2829,10 @@ msgstr "impossível fazer fstat em outro novo arquivo `%.250s'"
 #, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
-"%.250s' and `%.250s'"
+"%.250s' and `%.250s')"
 msgstr ""
-"dpkg: aviso - arquivo de configuração antigo `%.250s' é o mesmo que "
-"diversos outros arquivos (ambos `%.250s' e `%.250s'"
+"dpkg: aviso - arquivo de configuração antigo `%.250s' é o mesmo que diversos "
+"outros arquivos (ambos `%.250s' e `%.250s')"
 
 #: src/processarc.c:705
 #, c-format
@@ -3014,8 +3016,7 @@ msgstr ""
 #, c-format
 msgid "Debian `%s' package management program query tool\n"
 msgstr ""
-"Ferramento de procura do programa de gerenciamento de pacotes Debian "
-"`%s'\n"
+"Ferramento de procura do programa de gerenciamento de pacotes Debian `%s'\n"
 
 #: src/query.c:472
 #, c-format
@@ -3042,16 +3043,19 @@ msgstr ""
 "\n"
 "Comandos :\n"
 "  -s| --status <nome-pacote> ...      Exibe detalhes do status do pacote.\n"
-"  -p| --print-avail <nome-pacote> ... Exibe detalhes de versões disponíveis.\n"
+"  -p| --print-avail <nome-pacote> ... Exibe detalhes de versões "
+"disponíveis.\n"
 "  -L| --listfiles <nome-pacote> ...   Lista arquivos de `propriedade' do(s) "
 "pacote(s).\n"
 "  -l| --list [<padrão>] ...]          Lista pacotes abreviadamente.\n"
-"  -W| --show <padrão> ...             Exibe informação sobre o(s) pacote(s).\n"
+"  -W| --show <padrão> ...             Exibe informação sobre o(s) pacote"
+"(s).\n"
 "  -S| --search <padrão> ...           Procura pacote(s) prorietário(s) do(s) "
 "arquivo(s).\n"
 "  --help                              Exibe esta mensgem de ajuda.\n"
 "  --version                           Exibe a versão.\n"
-"  --license | --licence               Exibe termos de copyright e licenciamento\n"
+"  --license | --licence               Exibe termos de copyright e "
+"licenciamento\n"
 "\n"
 "Opções :\n"
 "  --admindir=<diretório>     Usa <diretório> ao invés de %s.\n"
@@ -3088,8 +3092,8 @@ msgid ""
 "\n"
 msgstr ""
 "Use --help para ajuda sobre pesquisa de pacotes;\n"
-"Use --license para informação de copyright e inexistência de garantia "
-"(GNU GPL).\n"
+"Use --license para informação de copyright e inexistência de garantia (GNU "
+"GPL).\n"
 
 #: src/remove.c:92
 #, c-format
