--- a/po/sk.po
+++ b/po/sk.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2006-02-11 02:12+0100\n"
-"PO-Revision-Date: 2006-02-11 08:05+0100\n"
+"POT-Creation-Date: 2006-02-17 08:03+0200\n"
+"PO-Revision-Date: 2006-02-17 08:15+0200\n"
 "Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -2758,7 +2758,9 @@ msgstr "dpkg-deb: zruš možné koncové nuly"
 #: src/processarc.c:611
 #, c-format
 msgid "dpkg: warning - could not stat old file `%.250s' so not deleting it: %s"
-msgstr "dpkg: upozornenie - nedá sa zistiť stav starého súboru `%.250s', takže sa nebude mazať: %s"
+msgstr ""
+"dpkg: upozornenie - nedá sa zistiť stav starého súboru `%.250s', takže sa "
+"nebude mazať: %s"
 
 #: src/processarc.c:619
 #, c-format
@@ -2771,8 +2773,8 @@ msgid ""
 "dpkg: warning - old conffile `%.250s' was an empty directory (and has now "
 "been deleted)\n"
 msgstr ""
-"dpkg: upozornenie - starý konfiguračný súbor `%.250s' je prázdny adresár "
-"(a teraz sa zmaže)\n"
+"dpkg: upozornenie - starý konfiguračný súbor `%.250s' je prázdny adresár (a "
+"teraz sa zmaže)\n"
 
 #: src/processarc.c:653
 #, c-format
@@ -2783,7 +2785,7 @@ msgstr "nedá sa zistiť stav ďalšieho nového súboru `%.250s'"
 #, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
-"%.250s' and `%.250s'"
+"%.250s' and `%.250s')"
 msgstr ""
 "dpkg: upozornenie - starý konfiguračný súbor `%.250s' je taký istý ako zopár "
 "nových súborov!  (obidva `%.250s' a `%.250s')"
