Move dselect gettext strings to its own domain provided now by the dselect package.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
+	* debian/dselect.install: Install only dselect domain.
+	* debian/dpkg.install: Install only dpkg domain.
+	* dselect/po: New directory.
+	* dselect/main.cc (main): Use DSELECT domain.
+	* dselect/Makefile.am (SUBDIRS): Add po.
+	* configure.ac (AC_CONFIG_FILES): Add dselect/po/Makefile.in.
+
+2006-02-17  Guillem Jover  <guillem@debian.org>
+
 	* methods/: Move directory to dselect/methods/.
 	* Makefile.am (SUBDIRS): Move methods to ...
 	* dselect/Makefile.am (SUBDIRS): ... here. New variable.
