--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ dpkg (1.13.16~) UNRELEASED; urgency=low
   * Require gettext 0.14.5.
   * Move the methods directory to dselect/methods, so the contents will not
     be installed if dselect is not to be built.
+  * Move dselect gettext strings to its own domain provided now by the
+    dselect package.
 
  -- Guillem Jover <guillem@debian.org>  Fri, 17 Feb 2006 03:52:59 +0200
 
