--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,11 @@
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
+	* POTFILES.in: Remove dselect source files.
+	* dpkg.pot: Regenerate.
+	* *.po: Merged with dpkg.pot. Removed obsolete strings.
+
+2006-02-17  Guillem Jover  <guillem@debian.org>
+
 	* dpkg.pot: Regenerated.
 	* *.po: Merged with dpkg.pot. Add missing closing parenthesis to
 	non-fuzzy strings.
