--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-17  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-scanpackages.pl: Fix override handling
+	which was broken by the latest changes.
+
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
 	* debian/dselect.install: Install only dselect domain.
